apps/wireguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wg-easy-vpn
  namespace: wireguard
  annotations:
    oci.oraclecloud.com/load-balancer-type: "nlb"
    oci.oraclecloud.com/reserved-ips: "158.180.64.79"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: wg-easy
  ports:
    - name: wireguard
      port: 51820
      targetPort: 51820
      protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: wg-easy-web
  namespace: wireguard
spec:
  type: ClusterIP
  selector:
    app: wg-easy
  ports:
    - name: web-ui
      port: 51821
      targetPort: 51821
      protocol: TCP
