apps/wireguard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wg-easy-web
  namespace: wireguard
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - vpn.klr.kr
      secretName: vpn-klr-kr-tls
  rules:
    - host: vpn.klr.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wg-easy-web
                port:
                  number: 51821
